--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">19,234</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">72,021</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">pkg1.Testfile1</td><td><a href="#m0">T3</a></td><td rowspan="1">1531220580059</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m1">kscus1</a></td><td rowspan="1">1531220564893</td><td rowspan="1">10016</td></tr><tr class="passedeven"><td><a href="#m2">verifyHomepageTitle</a></td><td rowspan="1">1531220574911</td><td rowspan="1">5148</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">pkg1.Exercise1</td><td><a href="#m0">adCount</a></td><td rowspan="1">1531445791446</td><td rowspan="1">40638</td></tr><tr class="passedeven"><td><a href="#m1">beds3</a></td><td rowspan="1">1531445788440</td><td rowspan="1">3004</td></tr><tr class="passedeven"><td><a href="#m2">clickApply</a></td><td rowspan="1">1531445786790</td><td rowspan="1">1648</td></tr><tr class="passedeven"><td><a href="#m3">clickDistrict</a></td><td rowspan="1">1531445779186</td><td rowspan="1">1580</td></tr><tr class="passedeven"><td><a href="#m4">clickHouses</a></td><td rowspan="1">1531445775135</td><td rowspan="1">4048</td></tr><tr class="passedeven"><td><a href="#m5">clickProperty</a></td><td rowspan="1">1531445769969</td><td rowspan="1">5164</td></tr><tr class="passedeven"><td><a href="#m6">openURL</a></td><td rowspan="1">1531445765283</td><td rowspan="1">4683</td></tr><tr class="passedeven"><td><a href="#m7">setMinMax</a></td><td rowspan="1">1531445780768</td><td rowspan="1">6020</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">pkg1.Testfile1#T3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">pkg1.Testfile1#kscus1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">pkg1.Testfile1#verifyHomepageTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">pkg1.Exercise1#adCount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">pkg1.Exercise1#beds3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">pkg1.Exercise1#clickApply</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">pkg1.Exercise1#clickDistrict</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">pkg1.Exercise1#clickHouses</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">pkg1.Exercise1#clickProperty</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">pkg1.Exercise1#openURL</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">pkg1.Exercise1#setMinMax</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
