--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a09464">  <td>18/07/10 16:32:40</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Testfile1.setUp()[pri:0, instance:pkg1.Testfile1@7fa833]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@7053484</td>   <td></td> </tr>
-<tr bgcolor="a09464">  <td>18/07/10 16:32:44</td>   <td>3983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testfile1.kscus1()[pri:1, instance:pkg1.Testfile1@7fa833]">kscus1</td> 
-  <td>main@7053484</td>   <td></td> </tr>
-<tr bgcolor="a09464">  <td>18/07/10 16:32:54</td>   <td>14001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testfile1.verifyHomepageTitle()[pri:2, instance:pkg1.Testfile1@7fa833]">verifyHomepageTitle</td> 
-  <td>main@7053484</td>   <td></td> </tr>
-<tr bgcolor="a09464">  <td>18/07/10 16:33:00</td>   <td>19149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testfile1.T3()[pri:3, instance:pkg1.Testfile1@7fa833]">T3</td> 
-  <td>main@7053484</td>   <td></td> </tr>
-<tr bgcolor="a09464">  <td>18/07/10 16:33:00</td>   <td>19160</td> <td>&nbsp;</td><td title="&lt;&lt;Testfile1.closeAll()[pri:0, instance:pkg1.Testfile1@7fa833]">&lt;&lt;closeAll</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@7053484</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>18/07/13 07:06:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Exercise1.inits()[pri:0, instance:pkg1.Exercise1@1aeed2f]">&gt;&gt;inits</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@33176221</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>18/07/13 07:06:05</td>   <td>2895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Exercise1.openURL()[pri:1, instance:pkg1.Exercise1@1aeed2f]">openURL</td> 
+  <td>main@33176221</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>18/07/13 07:06:09</td>   <td>7581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Exercise1.clickProperty()[pri:2, instance:pkg1.Exercise1@1aeed2f]">clickProperty</td> 
+  <td>main@33176221</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>18/07/13 07:06:15</td>   <td>12747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Exercise1.clickHouses()[pri:3, instance:pkg1.Exercise1@1aeed2f]">clickHouses</td> 
+  <td>main@33176221</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>18/07/13 07:06:19</td>   <td>16798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Exercise1.clickDistrict()[pri:4, instance:pkg1.Exercise1@1aeed2f]">clickDistrict</td> 
+  <td>main@33176221</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>18/07/13 07:06:20</td>   <td>18380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Exercise1.setMinMax()[pri:5, instance:pkg1.Exercise1@1aeed2f]">setMinMax</td> 
+  <td>main@33176221</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>18/07/13 07:06:26</td>   <td>24402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Exercise1.clickApply()[pri:6, instance:pkg1.Exercise1@1aeed2f]">clickApply</td> 
+  <td>main@33176221</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>18/07/13 07:06:28</td>   <td>26052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Exercise1.beds3()[pri:7, instance:pkg1.Exercise1@1aeed2f]">beds3</td> 
+  <td>main@33176221</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>18/07/13 07:06:31</td>   <td>29058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Exercise1.adCount()[pri:8, instance:pkg1.Exercise1@1aeed2f]">adCount</td> 
+  <td>main@33176221</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>18/07/13 07:07:12</td>   <td>69698</td> <td>&nbsp;</td><td title="&lt;&lt;Exercise1.exits()[pri:0, instance:pkg1.Exercise1@1aeed2f]">&lt;&lt;exits</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@33176221</td>   <td></td> </tr>
 </table>
