--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Kavinda\AppData\Local\Temp\testng-eclipse-1073066825\testng-customsuite.xml</span>
+                    <span>C:\Users\Kavinda\AppData\Local\Temp\testng-eclipse--642544335\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,42 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Testfile1" hash-for-method="T3">T3</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Exercise1" hash-for-method="adCount">adCount</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Testfile1" hash-for-method="kscus1">kscus1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Exercise1" hash-for-method="beds3">beds3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Testfile1" hash-for-method="verifyHomepageTitle">verifyHomepageTitle</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Exercise1" hash-for-method="clickApply">clickApply</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Exercise1" hash-for-method="clickDistrict">clickDistrict</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Exercise1" hash-for-method="clickHouses">clickHouses</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Exercise1" hash-for-method="clickProperty">clickProperty</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Exercise1" hash-for-method="openURL">openURL</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="pkg1.Exercise1" hash-for-method="setMinMax">setMinMax</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +155,63 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">pkg1.Testfile1</span>
+              <span class="class-name">pkg1.Exercise1</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="T3">
-                  </a> <!-- T3 -->
-                  <span class="method-name">T3</span>
+                  <a name="adCount">
+                  </a> <!-- adCount -->
+                  <span class="method-name">adCount</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="kscus1">
-                  </a> <!-- kscus1 -->
-                  <span class="method-name">kscus1</span>
+                  <a name="beds3">
+                  </a> <!-- beds3 -->
+                  <span class="method-name">beds3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyHomepageTitle">
-                  </a> <!-- verifyHomepageTitle -->
-                  <span class="method-name">verifyHomepageTitle</span>
+                  <a name="clickApply">
+                  </a> <!-- clickApply -->
+                  <span class="method-name">clickApply</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="clickDistrict">
+                  </a> <!-- clickDistrict -->
+                  <span class="method-name">clickDistrict</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="clickHouses">
+                  </a> <!-- clickHouses -->
+                  <span class="method-name">clickHouses</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="clickProperty">
+                  </a> <!-- clickProperty -->
+                  <span class="method-name">clickProperty</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="openURL">
+                  </a> <!-- openURL -->
+                  <span class="method-name">openURL</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="setMinMax">
+                  </a> <!-- setMinMax -->
+                  <span class="method-name">setMinMax</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +219,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Kavinda\AppData\Local\Temp\testng-eclipse-1073066825\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Kavinda\AppData\Local\Temp\testng-eclipse--642544335\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +228,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;pkg1.Testfile1&quot;/&gt;
+      &lt;class name=&quot;pkg1.Exercise1&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +268,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'kscus1')
-data.setCell(0, 2, 'pkg1.Testfile1')
-data.setCell(0, 3, 10016);
+data.setCell(0, 1, 'adCount')
+data.setCell(0, 2, 'pkg1.Exercise1')
+data.setCell(0, 3, 40638);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyHomepageTitle')
-data.setCell(1, 2, 'pkg1.Testfile1')
-data.setCell(1, 3, 5148);
+data.setCell(1, 1, 'setMinMax')
+data.setCell(1, 2, 'pkg1.Exercise1')
+data.setCell(1, 3, 6020);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'T3')
-data.setCell(2, 2, 'pkg1.Testfile1')
-data.setCell(2, 3, 0);
+data.setCell(2, 1, 'clickProperty')
+data.setCell(2, 2, 'pkg1.Exercise1')
+data.setCell(2, 3, 5164);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'openURL')
+data.setCell(3, 2, 'pkg1.Exercise1')
+data.setCell(3, 3, 4683);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'clickHouses')
+data.setCell(4, 2, 'pkg1.Exercise1')
+data.setCell(4, 3, 4048);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'beds3')
+data.setCell(5, 2, 'pkg1.Exercise1')
+data.setCell(5, 3, 3004);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'clickApply')
+data.setCell(6, 2, 'pkg1.Exercise1')
+data.setCell(6, 3, 1648);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'clickDistrict')
+data.setCell(7, 2, 'pkg1.Exercise1')
+data.setCell(7, 3, 1580);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,26 +331,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">pkg1.Testfile1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">pkg1.Exercise1</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">setUp</span>
+                <span class="method-name">inits</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">kscus1</span>
-                <span class="method-start">3983 ms</span>
+                <span class="method-name">openURL</span>
+                <span class="method-start">2901 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">verifyHomepageTitle</span>
-                <span class="method-start">14001 ms</span>
+                <span class="method-name">clickProperty</span>
+                <span class="method-start">7587 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">T3</span>
-                <span class="method-start">19149 ms</span>
+                <span class="method-name">clickHouses</span>
+                <span class="method-start">12753 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">clickDistrict</span>
+                <span class="method-start">16804 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">setMinMax</span>
+                <span class="method-start">18386 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">clickApply</span>
+                <span class="method-start">24408 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">beds3</span>
+                <span class="method-start">26058 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">adCount</span>
+                <span class="method-start">29064 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
-                <span class="method-name">closeAll</span>
-                <span class="method-start">19160 ms</span>
+                <span class="method-name">exits</span>
+                <span class="method-start">69704 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
